# mzd.cpp

./: .gitignore  CMakeLists.txt  Justfile  README.md
src/: main.cpp  mzd.hpp
test/: test_all.cpp
writeup/: writeup.ipynb  writeup.md
